# GasRegNet

./: .gitignore  ARCHITECTURE.md  ENGINEERING_PROMPT.md  Makefile  PREPRINT_PLAN.md  README.md  nextPhase.md  pyproject.toml
.github/workflows/: ci.yml
configs/: anchor_detection.yaml  assets.yaml  benchmarks.yaml  corpus_discovery.yaml  datasets.yaml  headline.yaml  refseq_catalogs.yaml  refseq_scan.yaml  regulator_families.yaml  scoring.yaml  sensory_domains.yaml
configs/analytes/: cn.yaml  co.yaml  cyd_control.yaml  no.yaml  o2.yaml
configs/benchmarks/: regulators_v2.csv
data/benchmarks/: REVIEW_LOG.md  anchors_v1.csv  benchmark_v1.csv  regulators_v2.csv
data/profiles/: coxL.hmm  coxM.hmm  coxS.hmm  cydA.hmm  cydB.hmm  cydX.hmm  fixL.hmm  fnr.hmm  hemAT.hmm  hmp.hmm  norB.hmm  norV.hmm  profiles.csv  profiles.yaml
data/references/: known_cn_organisms.csv  known_co_organisms.csv
data/seeds/: REVIEW_LOG.md  cn_anchor_seeds.faa  co_anchor_seeds.faa  co_coxL_anchor_seeds.faa  no_anchor_seeds.faa  o2_anchor_seeds.faa
gasregnet/: __init__.py  assets.py  benchmark.py  check_tools.py  cli.py  config.py  errors.py  hashing.py  logging.py  manifest.py  paths.py  schemas.py
gasregnet/io/: __init__.py  (+4 more)
scripts/: __init__.py  build_profiles.py  build_test_fixtures.py  corpus_dryrun.sh  fetch_assets.py  fetch_external_binaries.sh  generate_scaling_corpus.py  generate_scaling_taxdump.py  run_acceptance.sh  run_corpus_discovery.py  run_sqlite_demo.py
tests/: test_scaffold.py
workflows/: corpus_discovery.smk  diamond_mode.smk  full_discovery.smk  sqlite_mode.smk
(+99 files in other folders)
